fixed content area

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,2 +1,16 @@
 /** styles.css **/
 
+.main-content{
+    margin-top: 75px;
+}
+
+@media only screen and (max-width: 768px) {
+    .main-content{
+        margin-top: 60px;
+    }
+  }
+@media only screen and (max-width: 991px) {
+    .main-content{
+        margin-top: 60px;
+    }
+  }
