--- a/templates/base-landing.html
+++ b/templates/base-landing.html
@@ -66,9 +66,11 @@
             </div>
         </div>
     </nav>
+    <div class="main-content">
     {% block content %}
 
     {% endblock %}
+    </div>
 
     <!-- Footer -->
     <footer class="footer bg-light">
