--- a/templates/base-landing.html
+++ b/templates/base-landing.html
@@ -54,6 +54,9 @@
                         <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#portfolio">Home</a>
                     </li>
                     <li class="nav-item mx-0 mx-lg-1">
+                        <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#about">Dashboard</a>
+                    </li>
+                    <li class="nav-item mx-0 mx-lg-1">
                         <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#about">About</a>
                     </li>
                     <li class="nav-item mx-0 mx-lg-1">
@@ -66,7 +69,7 @@
             </div>
         </div>
     </nav>
-    <div class="main-content">
+    <div>
     {% block content %}
 
     {% endblock %}
