--- a/templates/base-landing.html
+++ b/templates/base-landing.html
@@ -59,9 +59,9 @@
                     <li class="nav-item mx-0 mx-lg-1">
                         <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#about">About</a>
                     </li>
-                    {% if user.is_authenticated%}
+                    {% if user.is_authenticated %}
                     <li class="nav-item mx-0 mx-lg-1">
-                        <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#contact">Logout</a>
+                        <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="accounts/logout/">Logout</a>
                     </li>
                     {% else %}
                     <li class="nav-item mx-0 mx-lg-1">
