--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -5,6 +5,30 @@
     margin-top: 75px;
 }
 
+/** Login **/
+form.user .btn-user {
+    font-size: .8rem;
+    border-radius: 10rem;
+    padding: .75rem 1rem;
+}
+
+.btn-google {
+    color: #fff;
+    background-color: #ea4335;
+    border-color: #fff;
+}
+
+.btn-block {
+    display: block;
+    width: 100%;
+}
+
+.btn-facebook {
+    color: #fff;
+    background-color: #3b5998;
+    border-color: #fff;
+}
+
 @media only screen and (max-width: 768px) {
     .main-content {
         margin-top: 60px;
