--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -13,6 +13,10 @@
 
     {% else %}
 
+    {% if form.errors %}
+    <p class="label label-danger">Your username and password didn't match. Please try again.</p>
+    {% endif %}
+
     <div class="container">
 
         <!-- Outer Row -->
@@ -33,24 +37,40 @@
                                     <form class="user login" method="POST" action="{% url 'account_login' %}">
                                         {% csrf_token %}
                                         <div class="form-group">
-                                            {{ form.login }}
-                                            <input type="email" class="form-control form-control-user" id="exampleInputEmail"
-                                                aria-describedby="emailHelp" placeholder="Enter Email Address...">
+                                            <input type="text" class="form-control form-control-user" name="login"
+                                                autofocus="autofocus" maxlength="150" required="" placeholder="Username"
+                                                id="id_login">
+                                            <!--<input type="email" class="form-control form-control-user" id="exampleInputEmail"
+                                                aria-describedby="emailHelp" placeholder="Enter Email Address...">-->
                                         </div>
                                         <div class="form-group">
-                                            {{ form.password }}
-                                            <input type="password" class="form-control form-control-user" id="exampleInputPassword"
+                                            <input type="password" name="password" id="id_password" required=""
+                                                placeholder="Password" class="form-control form-control-user">
+                                            <!--
+                                                <input type="password" class="form-control form-control-user" id="exampleInputPassword"
                                                 placeholder="Password">
+                                                -->
                                         </div>
                                         <div class="form-group">
                                             <div class="custom-control custom-checkbox small">
+
+                                                <input type="checkbox" name="remember" id="id_remember" class="custom-control-input">
+                                                <!--
                                                 <input type="checkbox" class="custom-control-input" id="customCheck">
+                                                -->
+
+                                                <label class="custom-control-label" for="id_remember">Remember Me</label>
+                                                <!--
                                                 <label class="custom-control-label" for="customCheck">Remember Me</label>
+                                                -->
                                             </div>
                                         </div>
+                                        <button class="btn btn-primary btn-user btn-block" type="submit">Sign In</button>
+                                        <!--
                                         <a href="index.html" class="btn btn-primary btn-user btn-block">
                                             Login
                                         </a>
+                                        -->
                                         <hr>
                                         <a href="index.html" class="btn btn-google btn-user btn-block">
                                             <i class="fab fa-google fa-fw"></i> Login with Google
