--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -65,6 +65,12 @@
                                                 -->
                                             </div>
                                         </div>
+                                        {% if redirect_field_value %}
+                                        <div class="form-group">
+                                            <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}"
+                                                class="form-control form-control-user" />
+                                        </div>
+                                        {% endif %}
                                         <button class="btn btn-primary btn-user btn-block" type="submit">Login</button>
                                         <!--
                                         <a href="index.html" class="btn btn-primary btn-user btn-block">
