--- a/templates/base-landing.html
+++ b/templates/base-landing.html
@@ -65,7 +65,7 @@
                     </li>
                     {% else %}
                     <li class="nav-item mx-0 mx-lg-1">
-                        <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="accounts/login/">Login</a>
+                        <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="{{ login_url }}">Login</a>
                     </li>
                     {% endif %}
                     
