--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -23,7 +23,9 @@
                             <div class="text-center">
                                 <h1 class="h4 text-gray-900 mb-4">Create an Account!</h1>
                             </div>
-                            <form class="user">
+                            <form class="signup user" id="signup_form" method="post" action="{% url 'account_signup' %}">
+                                {% csrf_token %}
+                                <!--
                                 <div class="form-group row">
                                     <div class="col-sm-6 mb-3 mb-sm-0">
                                         <input type="text" class="form-control form-control-user" id="exampleFirstName"
@@ -34,23 +36,52 @@
                                             placeholder="Last Name">
                                     </div>
                                 </div>
+                                -->
                                 <div class="form-group">
+                                    <!--
+                                    <input type="text" class="form-control form-control-user" id="exampleLastName" placeholder="Last Name">
+                                    -->
+                                    <input type="text" name="username" class="form-control form-control-user"
+                                        placeholder="Username" maxlength="150" minlength="1" id="id_username" required=""
+                                        autofocus="autofocus">
+                                </div>
+                                <div class="form-group">
+                                    <!--
                                     <input type="email" class="form-control form-control-user" id="exampleInputEmail"
                                         placeholder="Email Address">
+                                    -->
+                                    <input type="email" name="email" class="form-control form-control-user" placeholder="E-mail address"
+                                        id="id_email" required="">
                                 </div>
                                 <div class="form-group row">
                                     <div class="col-sm-6 mb-3 mb-sm-0">
+                                        <!--
                                         <input type="password" class="form-control form-control-user" id="exampleInputPassword"
                                             placeholder="Password">
+                                        -->
+                                        <input type="password" name="password1" class="form-control form-control-user"
+                                            placeholder="Password" id="id_password1" required="">
                                     </div>
                                     <div class="col-sm-6">
+                                        <!--
                                         <input type="password" class="form-control form-control-user" id="exampleRepeatPassword"
                                             placeholder="Repeat Password">
+                                        -->
+                                        <input type="password" name="password2" class="form-control form-control-user" placeholder="Password (again)" id="id_password2" required="">
                                     </div>
                                 </div>
+
+                                {% if redirect_field_value %}
+                                <div class="form-group row">
+                                    <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
+                                </div>
+                                {% endif %}
+                                <!--
                                 <a href="login.html" class="btn btn-primary btn-user btn-block">
                                     Register Account
                                 </a>
+                                -->
+                                <button type="submit" class="btn btn-primary btn-user btn-block">{% trans "Register Account" %}</button>
                                 <hr>
                                 <a href="index.html" class="btn btn-google btn-user btn-block">
                                     <i class="fab fa-google fa-fw"></i> Register with Google
@@ -61,10 +92,10 @@
                             </form>
                             <hr>
                             <div class="text-center">
-                                <a class="small" href="forgot-password.html">Forgot Password?</a>
+                                <a class="small" href="{% url 'account_reset_password' %}">Forgot Password?</a>
                             </div>
                             <div class="text-center">
-                                <a class="small" href="login.html">Already have an account? Login!</a>
+                                <a class="small" href="{{ login_url }}">Already have an account? Login!</a>
                             </div>
                         </div>
                     </div>
