--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -67,7 +67,8 @@
                                         <input type="password" class="form-control form-control-user" id="exampleRepeatPassword"
                                             placeholder="Repeat Password">
                                         -->
-                                        <input type="password" name="password2" class="form-control form-control-user" placeholder="Password (again)" id="id_password2" required="">
+                                        <input type="password" name="password2" class="form-control form-control-user"
+                                            placeholder="Password (again)" id="id_password2" required="">
                                     </div>
                                 </div>
 
@@ -81,7 +82,8 @@
                                     Register Account
                                 </a>
                                 -->
-                                <button type="submit" class="btn btn-primary btn-user btn-block">{% trans "Register Account" %}</button>
+                                <button type="submit" class="btn btn-primary btn-user btn-block">{% trans "Register
+                                    Account" %}</button>
                                 <hr>
                                 <a href="index.html" class="btn btn-google btn-user btn-block">
                                     <i class="fab fa-google fa-fw"></i> Register with Google
