--- a/templates/base-landing.html
+++ b/templates/base-landing.html
@@ -10,6 +10,7 @@
     <meta name="author" content="Shahjalal">
 
     <title>{% block title %}{% endblock %}</title>
+    <link rel="shortcut icon" type="image/png" href="{% static 'img/favicon.ico' %}"/>
 
     <!-- Bootstrap core CSS -->
     <link href="{% static 'vendor/bootstrap/css/bootstrap.min.css' %}" rel="stylesheet" />
