--- a/templates/account/profile.html
+++ b/templates/account/profile.html
@@ -1,3 +1,9 @@
 {% extends "base-landing.html" %}
 
+{% load i18n %}
 
+{% block head_title %}{% trans "Profile" %}{% endblock %}
+
+{% block content %}
+
+{% endblock %}
