login and reg form

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -36,6 +36,39 @@ form.user .btn-user {
     background-size: cover;
 }
 
+.errorlist {
+    color: #fff;
+    background-color: #dc3545;
+    display: inline-block;
+    padding: .25em .4em;
+    font-size: 79%;
+    font-weight: 700;
+    line-height: 1;
+    text-align: center;
+    white-space: nowrap;
+    vertical-align: baseline;
+    border-radius: .25rem;
+}
+
+.login-error{
+    margin-bottom: 15px;
+}
+
+@media only screen and (max-width: 425px) {
+    .errorlist {
+        color: #fff;
+        background-color: #dc3545;
+        display: inline-block;
+        padding: .25em .4em;
+        font-size: 79%;
+        font-weight: 700;
+        line-height: 1;
+        text-align: center;
+        vertical-align: baseline;
+        border-radius: .25rem;
+    }
+}
+
 @media only screen and (max-width: 768px) {
     .main-content {
         margin-top: 60px;
