user profile view cireated

--- a/templates/account/user_detail.html
+++ b/templates/account/user_detail.html
@@ -5,5 +5,9 @@
 {% block head_title %}{% trans "Profile" %}{% endblock %}
 
 {% block content %}
+<div class="main-content">
+    <p>asf asf asdf asdf</p>
+    {{request.user.username}}
+</div>
 
 {% endblock %}
