--- a/templates/account/user_detail.html
+++ b/templates/account/user_detail.html
@@ -92,7 +92,7 @@
                                     <label>Phone</label>
                                 </div>
                                 <div class="col-md-6">
-                                    <p>123 456 7890</p>
+                                    <p>{{request.user.phone}}</p>
                                 </div>
                             </div>
                             <div class="row">
@@ -100,7 +100,7 @@
                                     <label>Profession</label>
                                 </div>
                                 <div class="col-md-6">
-                                    <p>Web Developer and Designer</p>
+                                    <p>{{request.user.profession}}</p>
                                 </div>
                             </div>
                         </div>
