rating field added

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -165,7 +165,7 @@ body{
 }
 .profile-tab p{
     font-weight: 600;
-    color: #0062cc;
+    color: #4d4d4d;
 }
 
 /** Profile page style - end **/
