--- a/templates/account/user_detail.html
+++ b/templates/account/user_detail.html
@@ -79,7 +79,7 @@
                                     <label>Name</label>
                                 </div>
                                 <div class="col-md-6">
-                                    <p>{{request.user.first_name}} {{request.user.last_name}} -</p>
+                                    <p>{{request.user.first_name}} {{request.user.last_name}} &nbsp;</p>
                                 </div>
                             </div>
                             <div class="row">
