user detail update

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -112,13 +112,14 @@ body{
     color: #000000;
 }
 .profile-edit-btn{
-    border: none;
+    /*border: none;*/
     border-radius: 1.5rem;
     width: 70%;
     padding: 2%;
     font-weight: 600;
     color: #6c757d;
     cursor: pointer;
+    text-decoration: none;
 }
 .proile-rating{
     font-size: 12px;
