--- a/templates/account/user_detail.html
+++ b/templates/account/user_detail.html
@@ -42,7 +42,8 @@
                     </div>
                 </div>
                 <div class="col-md-2">
-                    <input type="submit" class="profile-edit-btn" name="btnAddMore" value="Edit Profile" />
+                    <a href="/user/{{request.user.username}}/edit" class="profile-edit-btn">Edit Profile</a>
+                    <!--<input type="submit" class="profile-edit-btn" name="btnAddMore" value="Edit Profile" />-->
                 </div>
             </div>
             <div class="row">
